--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -15,7 +15,7 @@
 <body>
     <div class="interface">
         <header id="cabecalho">
-                <a href="http://localhost:3000/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
+                <a https://ruralnbr.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
             <nav id="navmenu">
                 <ul class="menu">
                     <li class="btn-menu"><a href="#home">HOME</a></li>
@@ -83,7 +83,7 @@
                 </ul>
             </nav>
             <div id="butaoMaisArtigos">
-                <a href="http://localhost:3000/artigos">Mais Artigos</a>
+                <a https://ruralnbr.herokuapp.com/artigos">Mais Artigos</a>
             </div>
         </section>
         <section id="comunidade">
@@ -118,7 +118,7 @@
                     -->
                 </ul>
                 <div id="botaoMaisEventos">
-                    <a href="http://localhost:3000/eventos">Veja a lista completa de eventos</a>
+                    <a https://ruralnbr.herokuapp.com/eventos">Veja a lista completa de eventos</a>
                 </div>
             </div>
         </section>
