--- a/backend/view/artigos.html
+++ b/backend/view/artigos.html
@@ -12,13 +12,13 @@
 <body>
     <div class="interface-artigos">
         <header id="cabecalho">
-                <a href="http://localhost:3000/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
+                <a href="https://ruralnbr.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
             <nav id="navmenu">
                 <ul class="menu">
-                    <li class="btn-menu"><a href="http://localhost:3000/">HOME</a></li>
-                    <li class="btn-menu"><a href="http://localhost:3000/artigos">ARTIGOS</a></li>
-                    <li class="btn-menu"><a href="http://localhost:3000/#comunidade">COMUNIDADE</a></li>
-                    <li class="btn-menu"><a href="http://localhost:3000/#sobre">SOBRE NÓS</a></li>
+                    <li class="btn-menu"><a href="https://ruralnbr.herokuapp.com/">HOME</a></li>
+                    <li class="btn-menu"><a href="https://ruralnbr.herokuapp.com/#artigos">ARTIGOS</a></li>
+                    <li class="btn-menu"><a href="https://ruralnbr.herokuapp.com/#comunidade">COMUNIDADE</a></li>
+                    <li class="btn-menu"><a href="https://ruralnbr.herokuapp.com/#sobre">SOBRE NÓS</a></li>
                 </ul>
             </nav>
         </header>
