--- a/backend/view/previsao-tempo.html
+++ b/backend/view/previsao-tempo.html
@@ -1,12 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>testando tempo</title>
-</head>
-<body>
-    
-</body>
+<!doctype html>
+<html lang="pt-br">
+  <head>
+    <meta charset="utf-8">
+    <meta content="" name="description">
+
+    <title>HG Weather JS</title>
+
+    <script src="https://assets.hgbrasil.com/weather/js/hg-weather-1.0.js" type="text/javascript"></script>
+
+    <!--
+      Biblioteca JS para uso da api HG Weather
+      Veja mais informações em https://hgbrasil.com/weather
+
+      Para criar uma chave gratuita, entre em https://console.hgbrasil.com/keys
+      Copyrights HG Brasil 2018
+    -->
+
+    <style type="text/css" media="screen">
+      body { font-family: Arial; }
+      .hg-weather { border-radius: 3px; padding: 15px; display: inline-block; }
+
+      .hg-weather.clear_day { background-color: #217CAF; color: white; }
+      .hg-weather.clear_night { background-color: #555; color: white; }
+      .hg-weather.cloudly_day, .hg-weather.fog, .hg-weather.rain, .hg-weather.storm { background-color: #ddd; }
+      .hg-weather.cloudly_night { background-color: #444; color: white; }
+      #teste{
+          width: 100px;
+          padding: 0px;
+          background-color: blue;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>HG Weather</h1>
+
+    <ul>
+        <li>
+    <div class="hg-weather" id=" teste" data-key="a726c345" data-user_ip ="remote">
+      <span data-weather="message">Obtendo...<br></span>
+
+      <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
+      <span data-weather="description">Obtendo tempo...</span><br>
+      <img src="http://assets.api.hgbrasil.com/weather/images/44.png" data-weather="image"><br>
+    </div>
+</li>
+<li>
+    <div class="hg-weather" data-key="a726c345" data-woeid="456908">
+        <span data-weather="message">Obtendo...<br></span>
+      
+        <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
+        <span data-weather="description">Obtendo tempo...</span><br>
+        Nascer do Sol: <span data-weather="sunrise">00:00</span> - Pôr do Sol: <span data-weather="sunset">00:00</span><br>
+        Velocidade do vento: <span data-weather="wind_speedy">-- km/h</span><br>
+        <img src="http://assets.api.hgbrasil.com/weather/images/44.png" data-weather="image"><br>
+    </div>
+</li>    
+</ul>
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        HGWeather.initialize();
+      });
+    </script>
+  </body>
 </html>
