--- a/backend/view/artigos.html
+++ b/backend/view/artigos.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8"/>
     <title>RUARAL NEWS BR</title>
     <meta name="ruaral news brasil - levando informação ao campo" content="notícias, agropecuária, campo, zona rural, agronegócio, vida no campo">
-    <link rel="stylesheet" type="text/css" href="css-1/estiloHeader.css"/>
-    <link rel="stylesheet" type="text/css" href="css-1/estiloRodape.css"/>
-    <link rel="stylesheet" type="text/css" href="css-1/estilo-pagina-artigos-secao-artigos.css"/>
+    <link rel="stylesheet" type="text/css" href="css/estiloHeader.css"/>
+    <link rel="stylesheet" type="text/css" href="css/estiloRodape.css"/>
+    <link rel="stylesheet" type="text/css" href="css/estilo-pagina-artigos-secao-artigos.css"/>
     <link rel="stylesheet" type="text/css" href="fontawesome-free-5.9.0-web/css/all.min.css">
 </head>
 <body>
