--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8"/>
     <title>RUARAL NEWS BR</title>
     <meta name="ruaral news brasil - levando informação ao campo" content="notícias, agropecuária, campo, zona rural, agronegócio, vida no campo">
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloHeader.css"/>
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloHome.css"/>
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloArtigosPI.css"/>
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloComunidade.css"/>
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloSobreNos.css"/>
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloRodape.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloHeader.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloHome.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloArtigosPI.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloComunidade.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloSobreNos.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloRodape.css"/>
     <link rel="stylesheet" type="text/css" href="/fontawesome-free-5.9.0-web/css/all.min.css">
 </head>
 <body>
+
     <div class="interface">
         <header id="cabecalho">
 
@@ -25,6 +26,7 @@
                     <li class="btn-menu"><a href="#comunidade">COMUNIDADE</a></li>
                     <li class="btn-menu"><a href="#comunidade">COMUNIDADE</a></li>
                     <li class="btn-menu"><a href="#sobre">SOBRE</a></li>
+                    <li class="btn-menu"><a href="http://localhost:3000/tempo">TEMPO</a></li>
                 </ul>
             </nav>
         </header>
