--- a/backend/view/listEventos.html
+++ b/backend/view/listEventos.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="ruaral news brasil - levando informação ao campo" content="notícias, agropecuária, campo, zona rural, agronegócio, vida no campo">
-    <link rel="stylesheet" type="text/css" href="css-1/estiloHeader.css"/>
-    <link rel="stylesheet" type="text/css" href="css-1/estiloRodape.css"/>
-    <link rel="stylesheet" type="text/css" href="css-1/estilo-pagina-eventos-secao-eventos.css"/>
+    <link rel="stylesheet" type="text/css" href="css/estiloHeader.css"/>
+    <link rel="stylesheet" type="text/css" href="css/estiloRodape.css"/>
+    <link rel="stylesheet" type="text/css" href="css/estilo-pagina-eventos-secao-eventos.css"/>
     <link rel="stylesheet" type="text/css" href="fontawesome-free-5.9.0-web/css/all.min.css">
     <title>RUARAL NEWS BR</title>
 </head>
