--- a/backend/view/previsao-tempo.html
+++ b/backend/view/previsao-tempo.html
@@ -1,65 +1,76 @@
-<!doctype html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta content="" name="description">
+<!DOCTYPE html>
+<html lang="en">
+<head>
 
-    <title>HG Weather JS</title>
+    <meta charset="UTF-8"/>
+    <title>RUARAL NEWS BR</title>
+    <meta name="ruaral news brasil - levando informação ao campo" content="notícias, agropecuária, campo, zona rural, agronegócio, vida no campo">
+    <link rel="stylesheet" type="text/css" href="/css/estiloHeader.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloHome.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloArtigosPI.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloComunidade.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloSobreNos.css"/>
+    <link rel="stylesheet" type="text/css" href="/css/estiloRodape.css"/>
+    <link rel="stylesheet" href="/css/previsao.css">
+    <link rel="stylesheet" type="text/css" href="/fontawesome-free-5.9.0-web/css/all.min.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
 
     <script src="https://assets.hgbrasil.com/weather/js/hg-weather-1.0.js" type="text/javascript"></script>
+</head>
+<body>
 
-    <!--
-      Biblioteca JS para uso da api HG Weather
-      Veja mais informações em https://hgbrasil.com/weather
+  
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="/js/bootstrap.js"></script>
 
-      Para criar uma chave gratuita, entre em https://console.hgbrasil.com/keys
-      Copyrights HG Brasil 2018
-    -->
+  <div class="interface">
+      <header id="cabecalho">
 
-    <style type="text/css" media="screen">
-      body { font-family: Arial; }
-      .hg-weather { border-radius: 3px; padding: 15px; display: inline-block; }
+          <a href="http://localhost:3000/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
+          
+          <nav id="navmenu">
+              <ul class="menu">
+                  <li class="btn-menu"><a href="http://localhost:3000/">HOME</a></li>
+                    <li class="btn-menu"><a href="http://localhost:3000/#artigos">ARTIGOS</a></li>
+                    <li class="btn-menu"><a href="http://localhost:3000/#comunidade">COMUNIDADE</a</li>
+                    <li class="btn-menu"><a href="http://localhost:3000/#sobre">SOBRE NÓS</a></li>
+              </ul>
+          </nav>
+      </header>
+      <div class="content-tempo">
+          
+          <div class="dropdown">
+              <button style="background-color: rgba(12, 136, 12, 0.705);" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Selecione a cidade
+              </button>
+              <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                <a class="dropdown-item" id="455888" href="#">Natal</a>
+                <a class="dropdown-item" id="456908" href="#">Caicó</a>
+                <a class="dropdown-item" id="420779" href="#">Assú</a>
+                <a class="dropdown-item" id="420779" href="#">Ipanguaçu</a>
+              </div>
 
-      .hg-weather.clear_day { background-color: #217CAF; color: white; }
-      .hg-weather.clear_night { background-color: #555; color: white; }
-      .hg-weather.cloudly_day, .hg-weather.fog, .hg-weather.rain, .hg-weather.storm { background-color: #ddd; }
-      .hg-weather.cloudly_night { background-color: #444; color: white; }
-      #teste{
-          width: 100px;
-          padding: 0px;
-          background-color: blue;
-      }
-    </style>
-  </head>
-  <body>
-    <h1>HG Weather</h1>
+              <!-- DADOS DO TEMPO-->
 
-    <ul>
-        <li>
-    <div class="hg-weather" id=" teste" data-key="a726c345" data-user_ip ="remote">
-      <span data-weather="message">Obtendo...<br></span>
+              <div class="hg-weather" id="teste" data-key="a726c345" data-woeid="435701">
+                  <span data-weather="message">Obtendo...<br></span>
+                
+                  <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
+                  <span data-weather="description">Obtendo tempo...</span><br>
+                  Nascer do Sol: <span data-weather="sunrise">00:00</span> - Pôr do Sol: <span data-weather="sunset">00:00</span><br>
+                  Velocidade do vento: <span data-weather="wind_speedy">-- km/h</span><br>
+                  <img src="http://assets.api.hgbrasil.com/weather/images/44.png" data-weather="image"><br>
+              </div>
 
-      <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
-      <span data-weather="description">Obtendo tempo...</span><br>
-      <img src="http://assets.api.hgbrasil.com/weather/images/44.png" data-weather="image"><br>
-    </div>
-</li>
-<li>
-    <div class="hg-weather" data-key="a726c345" data-woeid="456908">
-        <span data-weather="message">Obtendo...<br></span>
-      
-        <span data-weather="city">Obtendo cidade</span> <span data-weather="temp">00</span>º C<br>
-        <span data-weather="description">Obtendo tempo...</span><br>
-        Nascer do Sol: <span data-weather="sunrise">00:00</span> - Pôr do Sol: <span data-weather="sunset">00:00</span><br>
-        Velocidade do vento: <span data-weather="wind_speedy">-- km/h</span><br>
-        <img src="http://assets.api.hgbrasil.com/weather/images/44.png" data-weather="image"><br>
-    </div>
-</li>    
-</ul>
-    <script>
-      document.addEventListener("DOMContentLoaded", function() {
-        HGWeather.initialize();
-      });
-    </script>
-  </body>
+              <script>
+                  document.addEventListener("DOMContentLoaded", function() {
+                    HGWeather.initialize();
+                  });
+              </script>
+
+            </div>
+      </div>
+  </div>
+</body>
 </html>
