--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -17,7 +17,7 @@
     <div class="interface">
         <header id="cabecalho">
 
-            <a href="http://localhost:3000/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
+            <a href="https://rural.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
             
             <nav id="navmenu">
                 <ul class="menu">
@@ -26,7 +26,7 @@
                     <li class="btn-menu"><a href="#comunidade">COMUNIDADE</a></li>
                     <li class="btn-menu"><a href="#comunidade">COMUNIDADE</a></li>
                     <li class="btn-menu"><a href="#sobre">SOBRE</a></li>
-                    <li class="btn-menu"><a href="http://localhost:3000/tempo">TEMPO</a></li>
+                    <li class="btn-menu"><a href="https://rural.herokuapp.com/tempo">TEMPO</a></li>
                 </ul>
             </nav>
         </header>
@@ -88,7 +88,7 @@
                 </ul>
             </nav>
             <div id="butaoMaisArtigos">
-                <a href="http://localhost:3000/artigos">Mais Artigos</a>
+                <a href="https://rural.herokuapp.com/artigos">Mais Artigos</a>
             </div>
         </section>
         <section id="comunidade">
@@ -123,7 +123,7 @@
                     -->
                 </ul>
                 <div id="botaoMaisEventos">
-                    <a href="http://localhost:3000/eventos">Veja a lista completa de eventos</a>
+                    <a href="https://rural.herokuapp.com/eventos">Veja a lista completa de eventos</a>
                 </div>
             </div>
         </section>
