--- a/backend/view/listEventos.html
+++ b/backend/view/listEventos.html
@@ -12,14 +12,14 @@
 <body>
     <div class="interface">
         <header id="cabecalho">
-                <a href="http://localhost:3000/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
+                <a href="https://rural.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
             <nav id="navmenu">
                 <ul class="menu">
-                    <li class="btn-menu"><a href="http://localhost:3000/">HOME</a></li>
-                    <li class="btn-menu"><a href="http://localhost:3000/#artigos">ARTIGOS</a></li>
-                    <li class="btn-menu"><a href="http://localhost:3000/#comunidade">COMUNIDADE</a</li>
-                    <li class="btn-menu"><a href="http://localhost:3000/#sobre">SOBRE NÓS</a></li>
-                <a href="https://ruralnbr.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
+                    <li class="btn-menu"><a href="https://rural.herokuapp.com/">HOME</a></li>
+                    <li class="btn-menu"><a href="https://rural.herokuapp.com/#artigos">ARTIGOS</a></li>
+                    <li class="btn-menu"><a href="https://rural.herokuapp.com/#comunidade">COMUNIDADE</a</li>
+                    <li class="btn-menu"><a href="https://rural.herokuapp.com/#sobre">SOBRE NÓS</a></li>
+                <a href="https://rural.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
         </header>
         <section class="corpo-pagina-eventos">
             <main class="secao-eventos">
