--- a/backend/view/login.html
+++ b/backend/view/login.html
@@ -6,19 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RUARAL NEWS BR</title>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloHeader.css"/>
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloRodape.css"/>
     <link rel="stylesheet" type="text/css" href="/fontawesome-free-5.9.0-web/css/all.min.css">
 </head>
 <body>
-    <div class="interface">
-        <header id="">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light m-0 p-0 pl-4" >
+    <div class="interface  container-fluid p-0 m-0">
+        <header class="row no-gutters">
+            <nav class="col-sm-12 no-gutters navbar navbar-expand-lg navbar-light bg-light m-0 p-3 pl-5 shadow-sm" >
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="#"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
-                      
+                <a class="navbar-brand" href="#"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
@@ -37,41 +34,42 @@
                 </div>
             </nav>
         </header>
-        <main>
-            <div class="d-flex justify-content-center">
-            <form class="m-5 p-4 w-auto border rounded" >
-                <div class="form-group">
-                    <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div>
-                <div class="form-group form-check">
-                  <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                  <label class="form-check-label" for="exampleCheck1">Check me out</label>
-                </div>
-                <button type="submit" class="btn btn-primary">Entrar</button>
-            </form>
-        </div>
-        <footer class="p-4 fixed-bottom" style="background-color: #f8f9fa">
-            <small class="d-flex justify-content-center m-2 p-3">&copy; Copyright 2019, Rural News Brasil</small>
-            <p class="d-flex justify-content-center">
+        <main class="row no-gutters" style="height: 70vh;">
+            <div class="col-sm-12 mt-5 d-flex justify-content-center">
+                <form class="m-3 p-4 w-auto border rounded" >
+                    <div class="form-group">
+                        <label for="exampleInputEmail1">Email</label>
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                    </div>
+                    <div class="form-group">
+                        <label for="exampleInputPassword1">Senha</label>
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    </div>
+                    <div class="form-group form-check">
+                        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                        <label class="form-check-label" for="exampleCheck1">Lembrar-me</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Entrar</button>
+                </form>
+            </div>
+        </main>
+        <footer class="row no-gutters mt-5 p-4 border-top" style=" background-color: #f8f9fa;">
+            <small class="col-sm-12 d-flex justify-content-center m-2 p-3">&copy; Copyright 2019, Rural News Brasil</small>
+            <p class="col-sm-12 d-flex justify-content-center">
                 <a class="btn btn-primary m-2" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Siga-nos nas redes sociais</a>
                 <button class="btn btn-primary m-2" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Publique seu artigo no RNB</button>
             </p>
-            <div class="row">
+            <div class="row no-gutters">
                 <div class="col">
-                    <div class="collapse multi-collapse" id="multiCollapseExample1">
+                    <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample1">
                         <div class="card card-body">
                             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                         </div>
                     </div>
                 </div>
                 <div class="col">
-                    <div class="collapse multi-collapse" id="multiCollapseExample2">
+                    <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample2">
                         <div class="card card-body">
                             Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
                         </div>
@@ -80,7 +78,6 @@
             </div>
             
         </footer>
-    </main>
     </div>
 </body>
 
