mais um dia com os forms

--- a/backend/view/login.html
+++ b/backend/view/login.html
@@ -11,7 +11,7 @@
 <body>
     <div class="interface  container-fluid p-0 m-0">
         <header class="row no-gutters">
-            <nav class="col-sm-12 no-gutters navbar navbar-expand-lg navbar-light bg-light m-0 p-3 pl-5 shadow-sm" >
+            <nav class="col-sm-12 no-gutters navbar navbar-expand-lg navbar-light bg-light m-0 p-3 pl-5 shadow-sm">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -36,7 +36,7 @@
         </header>
         <main class="row no-gutters" style="height: 70vh;">
             <div class="col-sm-12 mt-5 d-flex justify-content-center">
-                <form class="m-3 p-4 w-auto border rounded" >
+                <form class="m-3 p-4 w-auto border rounded shadow-sm" >
                     <div class="form-group">
                         <label for="exampleInputEmail1">Email</label>
                         <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
@@ -50,15 +50,15 @@
                         <input type="checkbox" class="form-check-input" id="exampleCheck1">
                         <label class="form-check-label" for="exampleCheck1">Lembrar-me</label>
                     </div>
-                    <button type="submit" class="btn btn-primary">Entrar</button>
+                    <button type="submit" class="bg-success btn btn-primary">Entrar</button>
                 </form>
             </div>
         </main>
-        <footer class="row no-gutters mt-5 p-4 border-top" style=" background-color: #f8f9fa;">
+        <footer class="row no-gutters mt-5 p-4 border-top bg-light">
             <small class="col-sm-12 d-flex justify-content-center m-2 p-3">&copy; Copyright 2019, Rural News Brasil</small>
             <p class="col-sm-12 d-flex justify-content-center">
-                <a class="btn btn-primary m-2" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Siga-nos nas redes sociais</a>
-                <button class="btn btn-primary m-2" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Publique seu artigo no RNB</button>
+                <a class="btn btn-primary m-2 bg-success" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Siga-nos nas redes sociais</a>
+                <button class="btn btn-primary m-2 bg-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Publique seu artigo no RNB</button>
             </p>
             <div class="row no-gutters">
                 <div class="col">
