--- a/backend/view/formulario-publicacoes.html
+++ b/backend/view/formulario-publicacoes.html
@@ -6,54 +6,123 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>RUARAL NEWS BR</title>
     <link rel="stylesheet" type="text/css" href="/css/bootstrap.css">
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloHeader.css"/>
-    <link rel="stylesheet" type="text/css" href="/css-1/estiloRodape.css"/>
     <link rel="stylesheet" type="text/css" href="/fontawesome-free-5.9.0-web/css/all.min.css">
 </head>
 <body>
-    <div class="interface">
-        <header id="cabecalho">
-                <a href="http://localhost:3000/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
-            <nav id="navmenu">
-                <ul class="menu">
-                    <li class="btn-menu"><a href="#home">HOME</a></li>
-                    <li class="btn-menu"><a href="#artigos">ARTIGOS</a></li>
-                    <li class="btn-menu"><a href="#comunidade">COMUNIDADE</a>    </li>
-                    <li class="btn-menu"><a href="#sobre">SOBRE</a></li>
-                </ul>
-            </nav>
+    <div class="interface container-fluid p-0 m-0">
+        <header class="row no-gutters">
+                <nav class="col-sm-12 no-gutters navbar navbar-expand-lg navbar-light bg-light m-0 p-3 pl-5 shadow-sm">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <a class="navbar-brand" href="#"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#artigos">ARTIGOS</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#comunidade">COMUNIDADE</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#sobre">SOBRE</a>
+                            </li>
+                        </ul>
+                    </div>
+                </nav>
         </header>
-        <main>
-            <form class="m-5">
-                <div class="form-group">
-                    <label for="formGroupExampleInput">Titulo do artigo</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Escreva aqui">
-                </div>
-                <div class="form-group">
-                    <label for="formGroupExampleInput2">Another label</label>
-                    <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input">
-                </div>
-            </form>
-        <footer class="rodape">
-            <header class="header-footer">
-                <ul class="icones-rede-sociais">
-                    <li class="fab fa-facebook-square"> Facebook</li>
-                    <li class="fab fa-twitter-square"> Twiter</li>
-                    <li class="fab fa-instagram"><a> Instagram</a></li>
-                </ul>
-                <h4>Você pode escrever um artigo e publicalo no RNBR!</h4>
-            </header>
-            <div class="logo-footer">
-                <img src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 150px; height: 200px;">
+        <main class="row no-gutters" style="height: 70vh;">
+            <div class="col-sm-12 mt-5 d-flex justify-content-center">
+                <form class="m-3 p-4 border rounded shadow-sm">
+                    <div class="form-row m-1">
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Nome do autor">
+                        </div>
+                        <div class="col">
+                            <input type="text" class="form-control" placeholder="Sobrenome">
+                        </div>
+                    </div>
+                    <div class="form-row m-1">
+                        <div class="col">
+                            <label for="exampleFormControlSelect1">Número de paragrafos</label>
+                            <select class="form-control" id="exampleFormControlSelect1">
+                                <option><a href rn-link="/view/paragrafo-publicacao.html" destino="#div-paragrafos">1</a></option>
+                                <option>2</option>
+                                <option>3</option>
+                                <option>4</option>
+                                <option>5</option>
+                            </select>
+                        </div>
+                        <div class="col">
+                            <label for="exampleFormControlSelect1">Imagem do cabeçalho</label>
+                            <div class="custom-file">
+                                <input type="file" class="custom-file-input" id="validatedCustomFile" required>
+                                <label class="custom-file-label" for="validatedCustomFile">Choose file...</label>
+                                <div class="invalid-feedback">Example invalid custom file feedback</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row m-1">
+                        <div class="col">
+                            <label>Título</label>
+                            <input type="text" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-row m-1 div-paragrafos" id="">
+
+                    </div>
+                    <a href rn-link="paragrafo-publicacao.html" destino=".div-paragrafos">1</a>
+                </form>
             </div>
-            <div class="redes-sociais">    
-                <p>Seguindo nossas redes sociais você nos ajuda disseminar nossas notícias e artigos, além de poder interagir conosco e nos transmitir um feedback mais direto.</p>
-            </div>
-            <div class="artigo-voluntario">
-                <p>Que tal colaborar com o nosso projeto? Escreva o seu artigo e envie para nosso email de contato <em>ruralnewsbr@gmail.com</em>. O seu artigo será avaliado pelos professores responaveis pelo RNBR, e se aprovado será publicado aqui. Você será informado sobre a situação do seu artigo.</p>
+            <script>
+                function navegarViaAjax(url, seletor) {
+                    if(!url || !seletor) return
+                    const elemento = document.querySelector(seletor)
+    
+                    fetch(url)
+                        .then(resp => resp.text())
+                        .then(html => {
+                            elemento.innerHTML = html
+                        })
+                    }
+    
+                    document.querySelectorAll('[rn-link]').forEach(link => {
+                        let url = link.attributes['rn-link'].value
+                        const seletorDestino = link.attributes['destino'].value
+    
+                        link.onclick = e => {
+                            e.preventDefault()
+                            navegarViaAjax(url, seletorDestino)
+                        }
+                    })
+                </script>
+        </main>
+        <footer class="row no-gutters mt-5 p-4 border-top bg-light">
+            <small class="col-sm-12 d-flex justify-content-center m-2 p-3">&copy; Copyright 2019, Rural News Brasil</small>
+            <p class="col-sm-12 d-flex justify-content-center">
+                <a class="btn btn-primary m-2 bg-success" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Siga-nos nas redes sociais</a>
+                <button class="btn btn-primary m-2 bg-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Publique seu artigo no RNB</button>
+            </p>
+            <div class="row no-gutters">
+                <div class="col">
+                    <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample1">
+                        <div class="card card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample2">
+                        <div class="card card-body">
+                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                        </div>
+                    </div>
+                </div>
             </div>
         </footer>
-    </main>
     </div>
 </body>
 
