--- a/backend/view/formulario-publicacoes.html
+++ b/backend/view/formulario-publicacoes.html
@@ -18,23 +18,23 @@
                     <a class="navbar-brand" href="#"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#artigos">ARTIGOS</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#comunidade">COMUNIDADE</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#sobre">SOBRE</a>
-                            </li>
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="https://rural.herokuapp.com/">Home <span class="sr-only">(current)</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="https://rural.herokuapp.com/#artigos">ARTIGOS</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="https://rural.herokuapp.com/#comunidade">COMUNIDADE</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="https://rural.herokuapp.com/#sobre">SOBRE</a>
+                                </li>
                         </ul>
                     </div>
                 </nav>
         </header>
-        <main class="row no-gutters" style="height: 70vh;">
+        <main class="row no-gutters" style="height: 65vh;">
             <div class="col-sm-12 mt-5 d-flex justify-content-center">
                 <form class="m-3 p-4 border rounded shadow-sm">
                     <div class="form-row m-1">
@@ -74,7 +74,6 @@
                     <div class="form-row m-1 div-paragrafos" id="">
 
                     </div>
-                    <a href rn-link="paragrafo-publicacao.html" destino=".div-paragrafos">1</a>
                 </form>
             </div>
             <script>
@@ -110,14 +109,19 @@
                 <div class="col">
                     <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample1">
                         <div class="card card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                            <ul class="icones-rede-sociais">
+                                <li class="fab fa-facebook-square mr-4"> Facebook</li>
+                                <li class="fab fa-twitter-square mr-4"> Twiter</li>
+                                <li class="fab fa-instagram"><a> Instagram</a></li>
+                            </ul>    
+                            <p style="width: auto">Seguindo nossas redes sociais você nos ajuda a expandir nossas notícias e artigos, além de poder interagir conosco diretamente e nos transmitir um feedback.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample2">
                         <div class="card card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                <p style="width: auto">Que tal fazer parte desse projeto?  Escreva o seu artigo e envie para nosso email de contato <em>ruralnewsbr@gmail.com</em>, iremos avaliar o seu trabalho, e se aprovado será publicado aqui! Você será informado sobre o resultado da nossa avaliação.</p>
                         </div>
                     </div>
                 </div>
