--- a/backend/view/login.html
+++ b/backend/view/login.html
@@ -34,7 +34,7 @@
                 </div>
             </nav>
         </header>
-        <main class="row no-gutters" style="height: 70vh;">
+        <main class="row no-gutters" style="height: 65vh;">
             <div class="col-sm-12 mt-5 d-flex justify-content-center">
                 <form class="m-3 p-4 w-auto border rounded shadow-sm" >
                     <div class="form-group">
@@ -64,14 +64,19 @@
                 <div class="col">
                     <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample1">
                         <div class="card card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                                <ul class="icones-rede-sociais">
+                                    <li class="fab fa-facebook-square mr-2"> Facebook</li>
+                                    <li class="fab fa-twitter-square m-2"> Twiter</li>
+                                    <li class="fab fa-instagram m-2"><a> Instagram</a></li>
+                                </ul>    
+                                <p style="width: auto">Seguindo nossas redes sociais você nos ajuda a expandir nossas notícias e artigos, além de poder interagir conosco diretamente e nos transmitir um feedback.</p>
                         </div>
                     </div>
                 </div>
                 <div class="col">
                     <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample2">
                         <div class="card card-body">
-                            Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
+                            <p style="width: auto">Que tal fazer parte desse projeto?  Escreva o seu artigo e envie para nosso email de contato <em>ruralnewsbr@gmail.com</em>, iremos avaliar o seu trabalho, e se aprovado será publicado aqui! Você será informado sobre o resultado da nossa avaliação.</p>
                         </div>
                     </div>
                 </div>
