--- a/backend/view/previsao-tempo.html
+++ b/backend/view/previsao-tempo.html
@@ -21,27 +21,36 @@
 
 </head>
 <body>
-
-  
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="/js/bootstrap.js"></script>
 
-  <div class="interface">
-      <header id="cabecalho">
-
-          <a href="https://rural.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias"/></a>
-          
-          <nav id="navmenu">
-              <ul class="menu">
-                  <li class="btn-menu"><a href="https://rural.herokuapp.com/">HOME</a></li>
-                    <li class="btn-menu"><a href="https://rural.herokuapp.com/#artigos">ARTIGOS</a></li>
-                    <li class="btn-menu"><a href="https://rural.herokuapp.com/#comunidade">COMUNIDADE</a</li>
-                    <li class="btn-menu"><a href="https://rural.herokuapp.com/#sobre">SOBRE NÓS</a></li>
-              </ul>
+  <div class="interface container-fluid p-0 m-0">
+      <header class="row no-gutters">
+          <nav class="col-sm-12 no-gutters navbar navbar-expand-lg navbar-light bg-light m-0 p-3 pl-5 shadow-sm">
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+                  <span class="navbar-toggler-icon"></span>
+              </button>
+              <a class="navbar-brand" href="#"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
+              <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+                  <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                      <li class="nav-item active">
+                          <a class="nav-link" href="https://rural.herokuapp.com/">Home <span class="sr-only">(current)</span></a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="https://rural.herokuapp.com/#artigos">ARTIGOS</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="https://rural.herokuapp.com/#comunidade">COMUNIDADE</a>
+                      </li>
+                      <li class="nav-item">
+                          <a class="nav-link" href="https://rural.herokuapp.com/#sobre">SOBRE</a>
+                      </li>
+                  </ul>
+              </div>
           </nav>
       </header>
-      <div class="content-tempo">
+      <div class="content-tempo" style="height: 50vh;">
           
           <div class="dropdown">
               <button style="background-color: rgba(12, 136, 12, 0.705);" class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -81,10 +90,36 @@
                     }
                   })
                 </script>
-
-
             </div>
       </div>
+      <footer class="row no-gutters mt-5 p-4 border-top bg-light">
+          <small class="col-sm-12 d-flex justify-content-center m-2 p-3">&copy; Copyright 2019, Rural News Brasil</small>
+          <p class="col-sm-12 d-flex justify-content-center">
+              <a class="btn btn-primary m-2 bg-success" data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Siga-nos nas redes sociais</a>
+              <button class="btn btn-primary m-2 bg-success" type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Publique seu artigo no RNB</button>
+          </p>
+          <div class="row no-gutters">
+              <div class="col">
+                  <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample1">
+                      <div class="card card-body">
+                            <ul class="icones-rede-sociais">
+                                <li class="fab fa-facebook-square mr-2"> Facebook</li>
+                                <li class="fab fa-twitter-square m-2"> Twiter</li>
+                                <li class="fab fa-instagram m-2"><a> Instagram</a></li>
+                            </ul>    
+                            <p style="width: auto">Seguindo nossas redes sociais você nos ajuda a expandir nossas notícias e artigos, além de poder interagir conosco diretamente e nos transmitir um feedback.</p>
+                      </div>
+                  </div>
+              </div>
+              <div class="col">
+                  <div class="collapse multi-collapse m-1 p-1" id="multiCollapseExample2">
+                      <div class="card card-body">
+                            <p style="width: auto">Que tal fazer parte desse projeto?  Escreva o seu artigo e envie para nosso email de contato <em>ruralnewsbr@gmail.com</em>, iremos avaliar o seu trabalho, e se aprovado será publicado aqui! Você será informado sobre o resultado da nossa avaliação.</p>
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </footer>
   </div>
 </body>
 </html>
