--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -23,16 +23,16 @@
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                             <li class="nav-item active">
-                                <a class="nav-link" href="https://rural.herokuapp.com/">Home <span class="sr-only">(current)</span></a>
+                                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://rural.herokuapp.com/#artigos">ARTIGOS</a>
+                                <a class="nav-link" href="#artigos">ARTIGOS</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://rural.herokuapp.com/#comunidade">COMUNIDADE</a>
+                                <a class="nav-link" href="#comunidade">COMUNIDADE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://rural.herokuapp.com/#sobre">SOBRE</a>
+                                <a class="nav-link" href="#sobre">SOBRE</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="https://rural.herokuapp.com/tempo">TEMPO</a>
