--- a/backend/view/formulario-publicacoes.html
+++ b/backend/view/formulario-publicacoes.html
@@ -15,20 +15,20 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
+                    <a class="navbar-brand" href="https://ruralnbr.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="https://rural.herokuapp.com/">Home <span class="sr-only">(current)</span></a>
+                                    <a class="nav-link" href="https://ruralnbr.herokuapp.com/">Home <span class="sr-only">(current)</span></a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://rural.herokuapp.com/#artigos">ARTIGOS</a>
+                                    <a class="nav-link" href="https://ruralnbr.herokuapp.com/#artigos">ARTIGOS</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://rural.herokuapp.com/#comunidade">COMUNIDADE</a>
+                                    <a class="nav-link" href="https://ruralnbr.herokuapp.com/#comunidade">COMUNIDADE</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="https://rural.herokuapp.com/#sobre">SOBRE</a>
+                                    <a class="nav-link" href="https://ruralnbr.herokuapp.com/#sobre">SOBRE</a>
                                 </li>
                         </ul>
                     </div>
