--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -19,7 +19,7 @@
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <a class="navbar-brand" href="#"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
+                    <a class="navbar-brand" href="https://ruralnbr.herokuapp.com/"><img id="logo" src="/imagens/loguinha.png" alt="agroecologia, campo, IFRN, IFRN - Ipanguaçu, notícias" style="width: 100px; height: 45px;"/></a>
                     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                             <li class="nav-item active">
@@ -35,7 +35,7 @@
                                 <a class="nav-link" href="#sobre">SOBRE</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="https://rural.herokuapp.com/tempo">TEMPO</a>
+                                <a class="nav-link" href="https://ruralnbr.herokuapp.com/tempo">TEMPO</a>
                             </li>
                         </ul>
                     </div>
@@ -99,7 +99,7 @@
                 </ul>
             </nav>
             <div id="butaoMaisArtigos">
-                <a href="https://rural.herokuapp.com/artigos">Mais Artigos</a>
+                <a href="https://ruralnbr.herokuapp.com/artigos">Mais Artigos</a>
             </div>
         </section>
         <section id="comunidade">
@@ -134,7 +134,7 @@
                     -->
                 </ul>
                 <div id="botaoMaisEventos">
-                    <a href="https://rural.herokuapp.com/eventos">Veja a lista completa de eventos</a>
+                    <a href="https://ruralnbr.herokuapp.com/eventos">Veja a lista completa de eventos</a>
                 </div>
             </div>
         </section>
