--- a/backend/view/index.html
+++ b/backend/view/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <div class="interface container-fluid p-0 m-0">
+    <div class="container-fluid p-0 m-0">
             <header class="row no-gutters">
                 <nav class="col-sm-12 no-gutters navbar navbar-expand-lg navbar-light bg-light m-0 p-3 pl-5 shadow-sm">
                     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
                 </nav>
         </header>
         <main>
-        <section id="home">
+        <section id="home" class="row no-gutters">
             <div id = apresentacao>
                 <h2>Fique por dentro de tudo que acontece no campo.</h2>
                 <p>
@@ -50,7 +50,7 @@
                 </p>
             </div>
         </section>
-        <section id="artigos">
+        <section id="artigos" class="row no-gutters">
             <h2>Artigos</h2>
             <nav id="navArtigos">
                 <ul id="listArtigos">
@@ -102,7 +102,7 @@
                 <a href="https://ruralnbr.herokuapp.com/artigos">Mais Artigos</a>
             </div>
         </section>
-        <section id="comunidade">
+        <section id="comunidade" class="row no-gutters">
             <h2>Comunidade</h2>
             <div id="apresentacaoComunidade">
                 <p>Aqui você pode ficar por dentro de tudo que acontece em toda a comunidade ruarl do vale do assú e todo RN. O RNBR se esforça para que o homem do campo fique a par de tudo que aconte, então confira alguns eventos abaixo.</p>
@@ -138,7 +138,7 @@
                 </div>
             </div>
         </section>
-        <section id="sobre">
+        <section id="sobre" class="row no-gutters">
             <header class="sobre-header">
                 <h1>Sobre nós...</h1>
             </header> 
